--- a/circles.css
+++ b/circles.css
@@ -1,4 +1,4 @@
-/* nb=-+65%   patatap clone*/
+/* nb-=+65%   patatap clone*/
 
 /* <!-- for(var x = 0; x < 1000; x+=100 ){
     for(var y = 0; y < 1000; y+=100 ){
